feat(CR-47): session has its own inbound queue to emit incoming messages event