@@ -33,7 +33,9 @@ import com.tenio.core.network.entity.session.manager.SessionManager;
 import com.tenio.core.scheduler.task.AbstractSystemTask;
 import java.io.IOException;
 import java.util.Iterator;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -45,6 +47,9 @@ import java.util.concurrent.TimeUnit;
  */
 public final class AutoCleanOrphanSessionTask extends AbstractSystemTask {
 
+  private ScheduledExecutorService scheduledService;
+  private ExecutorService executorService;
+  private ScheduledFuture<?> scheduler;
   private SessionManager sessionManager;
 
   private AutoCleanOrphanSessionTask(EventManager eventManager) {
@@ -62,21 +67,17 @@ public final class AutoCleanOrphanSessionTask extends AbstractSystemTask {
   }
 
   @Override
-  public ScheduledFuture<?> run() {
-    var threadFactoryTask =
-        new ThreadFactoryBuilder().setDaemon(true).setNameFormat("auto-clean-orphan-session-task")
-            .build();
-    var threadFactoryWorker =
-        new ThreadFactoryBuilder().setDaemon(true).setNameFormat("auto-clean-orphan-worker")
-            .build();
-    var executors = Executors.newCachedThreadPool(threadFactoryWorker);
-    return Executors.newSingleThreadScheduledExecutor(threadFactoryTask).scheduleAtFixedRate(
+  public void run() {
+    executorService = Executors.newVirtualThreadPerTaskExecutor();
+    var threadFactoryTask = new ThreadFactoryBuilder().setNameFormat("auto-clean-orphan-session-task").build();
+    scheduledService = Executors.newSingleThreadScheduledExecutor(threadFactoryTask);
+    scheduler = scheduledService.scheduleAtFixedRate(
         () -> {
           if (isDebugEnabled()) {
             debug("AUTO CLEAN ORPHAN SESSION",
                 "Checking orphan sessions in ", sessionManager.getSessionCount(), " entities");
           }
-          executors.execute(() -> {
+          executorService.execute(() -> {
             Iterator<Session> iterator = sessionManager.getReadonlySessionsList().listIterator();
             while (iterator.hasNext()) {
               Session session = iterator.next();
@@ -84,8 +85,7 @@ public final class AutoCleanOrphanSessionTask extends AbstractSystemTask {
                 try {
                   if (isDebugEnabled()) {
                     debug("AUTO CLEAN ORPHAN SESSION",
-                        "Session ", session.getId(),
-                        " is going to be forced to remove by the cleaning task");
+                        "Session ", session.getId(), "is going to be forced to remove by the cleaning task");
                   }
                   session.close(ConnectionDisconnectMode.ORPHAN, PlayerDisconnectMode.CONNECTION_LOST);
                 } catch (IOException exception) {
@@ -106,5 +106,36 @@ public final class AutoCleanOrphanSessionTask extends AbstractSystemTask {
    */
   public void setSessionManager(SessionManager sessionManager) {
     this.sessionManager = sessionManager;
+  }
+
+  @Override
+  public ScheduledFuture<?> getScheduler() {
+    return scheduler;
+  }
+
+  @Override
+  public void shutdown() {
+    if (scheduledService != null) {
+      scheduledService.shutdown();
+    }
+    if (executorService != null) {
+      executorService.shutdown();
+    }
+
+    try {
+      if (scheduledService != null) {
+        scheduledService.awaitTermination(5, TimeUnit.SECONDS);
+      }
+      if (executorService != null) {
+        executorService.awaitTermination(5, TimeUnit.SECONDS);
+      }
+    } catch (InterruptedException exception) {
+      if (scheduledService != null) {
+        scheduledService.shutdownNow();
+      }
+      if (executorService != null) {
+        executorService.shutdownNow();
+      }
+    }
   }
 }
